2005-08-05  Jeff Muizelaar  <jeff@infidigm.net>

	* test/buffer-diff.c: (buffer_diff_core), (buffer_diff),
	(buffer_diff_noalpha):
	* test/buffer-diff.h: rewrite buffer_diff to be endian safe
	and add a new fuction buffer_diff_noalpha

2005-08-05  Carl Worth  <cworth@cworth.org>

	* doc/public/cairo-sections.txt: Remove CAIRO_BEGIN_DECLS and
	CAIRO_END_DECLS which don't belong here.

2005-08-05  Carl Worth  <cworth@cworth.org>

	* test/surface-finish-twice.c (draw): Remove unused variable.
	
2005-08-05  Carl Worth  <cworth@cworth.org>
	
	* doc/public/Makefile.am: Ignore cairo-clip-private.h.
	
	* doc/public/cairo-docs.xml: Drop non-existent cairo-atsui.xml.
	
	* src/cairo-font.c: Fix misnamed parameters in comment blocks.
	
	* test/cairo-test.c: Include config.h so HAVE_UNISTD_H gets
	picked up as necessary.

2005-08-05  Carl Worth  <cworth@cworth.org>

	* doc/public/Makefile.am (IGNORE_HFILES): Ignore
	cairo-clip-private.h.

2005-08-05  Carl Worth  <cworth@cworth.org>

	* doc/public/cairo-sections.txt: Add some missing declarations to
	the appropriate sections.
	
	* doc/public/tmpl/cairo-font.sgml:
	* doc/public/tmpl/cairo-surface.sgml:
	* doc/public/tmpl/cairo-xlib.sgml:
	* doc/public/tmpl/cairo.sgml: churn
	
	* src/cairo-path-data-private.h: Rename cairo_path_nil to
	_cairo_path_nil since it may be exported, and tag it cairo_private
	to try to avoid exporting it. Qualify it as const well.
	
	* src/cairo-path-data.c: (_cairo_path_data_create_real):
	* src/cairo.c: (cairo_copy_path), (cairo_copy_path_flat):
	Track new name of _cairo_path_nil and cast away the const as
	required.

2005-08-05  Carl Worth  <cworth@cworth.org>

	* src/cairo-arc.c:
	* src/cairo-matrix.c: Remove include of math.h since cairoint.h
	does it more carefully, (for annoying platforms for which just
	including math.h without extra defines is not enough).

	* src/cairo.c: Replace Cairo with cairo.
	
	* test/buffer-diff.c: Include config.h so HAVE_UNISTD_H gets
	picked up as necessary.
	